<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  	<modelVersion>4.0.0</modelVersion>
  	<groupId>innovimax.mixthem</groupId>
  	<artifactId>MixThem</artifactId>
  	<packaging>jar</packaging>
  	<version>1.0-SNAPSHOT</version>
  	<name>Mix-them</name>
	<description>Mix files togethers</description>
	<developers>
		<developer>
			<id>innovimax</id>
			<name>innovimax</name>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>innovimax-jim</id>
			<name>innovimax-jim</name>
			<roles>
				<role>developer</role>
			</roles>
		</developer>		
	</developers>
	<organization>
		<name>Innovimax</name>
		<url>http://innovimax.fr</url>
	</organization>
	<properties>
		<jdk.version>8</jdk.version>
		<junit.version>LATEST</junit.version>
		<pmd.version>3.7</pmd.version>
	</properties>  
  	<dependencies>
    	<dependency>    	
      		<groupId>junit</groupId>
      		<artifactId>junit</artifactId>
      		<version>${junit.version}</version>
      		<scope>test</scope>
    	</dependency>   
  	</dependencies>
  	<build>
    	<finalName>mixthem</finalName>   	
		<plugins>
			<plugin>
                        	<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${pmd.version}</version>
				<configuration>
					<linkXRef>true</linkXRef>
					<sourceEncoding>UTF-8</sourceEncoding>
					<minimumTokens>100</minimumTokens>
					<targetJdk>1.8</targetJdk>
					<verbose>true</verbose>
				</configuration>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
							<goal>cpd-check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		  	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgs>
						<arg>-deprecation</arg>
					</compilerArgs>						
				</configuration>
		  	</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>				
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>innovimax.mixthem.MixThem</mainClass>
						</manifest>
					</archive>
				</configuration>				
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check />
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.2</version>
			</plugin>
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>LATEST</version>
			</plugin>
		</plugins>
	</build>
</project>
